# jitBrainsForthMacIntel

./: CMakeLists.txt  Compiler.h  CompilerUtility.h  ForthDictionary.cpp  ForthDictionary.h  JitContext.cpp  JitContext.h  JitGenerator.h  LICENSE  README.md  StackManager.h  StringInterner.h  StringStorage.h  fact.f  generator.md  interpreter.h  jitLabels.h  main.cpp  quit.cpp  quit.h  start.f  testcase.f  tests.h  utility.h
